# ECBS-master

./: .gitignore  Bounded Suboptimal Search for CBS (1).pptx  CMakeLists.txt  README.md  driver.cpp  feature.txt  run_benchmark.sh  tmp.csv
config/: config.yaml  den520d_num_success.yaml  random-32-32-20_20_time_soc.yaml  random-32-32-20_50_ins_ratio.yaml  random-32-32-20_50_runtime_accu_ins.yaml  random-32-32-20_50_time_soc.yaml  random-32-32-20_50_weight_subopt.yaml  random-32-32-20_num_soc.yaml
hpc/den520d/: run_cbs.sh  run_ecbs.sh  run_macbs.sh  run_macbs_epea.sh  run_macbs_epea_mr.sh  run_macbs_mr.sh  run_maecbs.sh  run_maecbs_epea.sh  run_maecbs_epea_mr.sh  run_maecbs_mr.sh  run_maecbs_ro.sh  run_process.sh
hpc/maze-32-32-2/: run_cbs.sh  run_ecbs.sh  run_macbs.sh  run_macbs_epea.sh  run_macbs_epea_mr.sh  run_macbs_mr.sh  run_maecbs.sh  run_maecbs_epea.sh  run_maecbs_epea_mr.sh  run_maecbs_mr.sh  run_maecbs_ro.sh
hpc/random-32-32-20/: run_cbs.sh  run_ecbs.sh  run_macbs.sh  run_macbs_epea.sh  run_macbs_epea_mr.sh  run_macbs_mr.sh  run_maecbs.sh  run_maecbs_epea.sh  run_maecbs_epea_mr.sh  run_maecbs_mr.sh  run_maecbs_ro.sh
hpc/warehouse-20-40-10-2-1/: run_cbs.sh  run_ecbs.sh  run_macbs.sh  run_macbs_epea.sh  run_macbs_epea_mr.sh  run_macbs_mr.sh  run_maecbs.sh  run_maecbs_epea.sh  (+11 more)
inc/: basic_solver.h  cbs.h  cbs_node.h  common.h  ecbs.h  ecbs_node.h  epea.h  epea_node.h  grid2D.h  node.h  single_agent.h
script/: calculate_par10.py  calculate_w.py  data100.txt  data75.txt  data80.txt  data85.txt  data90.txt  data95.txt  dataSol.txt  dataTime.txt  data_processor.py  data_processor2.py  data_processor3.py  data_train85.txt  plot.py  plot_map_ins.py  scatter.py  set_yaml.py
src/: basic_solver.cpp  cbs.cpp  ecbs.cpp  epea.cpp  epea_node.cpp  grid2D.cpp  node.cpp  single_agent.cpp
train/: dataProcessor.py  model_prev.txt  ~$st_95_1.1.csv
(+41 files in other folders)
